chore(release-prep): MIT license, product README, English docs, community files, remove internal material
Replaces Apache-2.0 with MIT (2026 inertiajs-java) across LICENSE and POMs; published JARs now carry META-INF/LICENSE. Rewrites README as a product page (badges, quickstarts, starter kits, compatibility evidence). Normalizes docs/ to English (getting-started x2, configuration, native-image, migration, protocol-compatibility) plus ROADMAP and ADRs. Adds CODE_OF_CONDUCT, rewritten CONTRIBUTING, SECURITY (diovamny@gmail.com), SUPPORT, PR template, issue config and Dependabot. Removes Prompt/, internal plans, tracked .idea and build junk from the index; clean .gitignore.